<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="horizontal" >

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center" >


         <ImageView
        	android:id="@+id/ImageView01"
        	android:layout_width="match_parent"
    	   	android:layout_height="wrap_content" 
    	   	android:layout_marginBottom="5dip"/>

       	<TextView
        	    android:id="@+id/TextView01"
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    android:layout_gravity="center_horizontal"
        	    android:textSize="20sp"
        	    android:layout_marginBottom="5dip"
        	    android:text="@string/gameover" />
         
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1" >
            
    	  	<Button
          		android:id="@+id/Button01"
          		android:layout_width="match_parent"
          		android:layout_height="wrap_content"
          		android:layout_gravity="center_horizontal"
          		android:layout_weight="0.76"
          		android:layout_marginRight="10dip"
          		android:text="@string/restart" />
	
      		<Button
          		android:id="@+id/Button02"
          		android:layout_width="match_parent"
          		android:layout_height="wrap_content"
          		android:layout_weight="0.76"
          		android:text="@string/menu_exit" />

          	</LinearLayout>
    </LinearLayout>
</LinearLayout>