<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

     <ImageView
        android:id="@+id/pong_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dip"
        android:layout_marginTop="40dip"
        android:src="@drawable/pong" >
    </ImageView>
    
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/labelSonido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dip"
            android:text="@string/sonidoMenu"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:width="250dip" >
        </TextView>

        <CheckBox
            android:id="@+id/checkBoxSonido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" >
        </CheckBox>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/labelVibracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dip"
            android:text="@string/vibracionMenu"
            android:textAppearance="?android:attr/textAppearanceLarge" >
        </TextView>

        <CheckBox
            android:id="@+id/checkBoxVibracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" >
        </CheckBox>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/labelAccel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:text="@string/accel"
            android:textAppearance="?android:attr/textAppearanceLarge" >
        </TextView>

        <CheckBox
            android:id="@+id/checkBoxAccel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </CheckBox>
    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <TextView
            android:id="@+id/labelGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
             android:layout_marginBottom="10dip"
            android:text="@string/gametype"
            android:textAppearance="?android:attr/textAppearanceLarge" >
        </TextView>
	</TableRow>
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="45dip"
            android:layout_marginLeft="80dip"
            android:layout_marginRight="30dip"
            android:entries="@array/gameArray" />

</TableLayout>